--- a/index.html
+++ b/index.html
@@ -1,7 +1,85 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+                                        <!-- Favicon Image link -->
+  <link rel="icon" type="image/x-icon" href="https://telegra.ph/file/dc2465152794206a7c8ce.jpg">
+  <title>Yash Sharma</title>  <!-- Page Title -->
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <div class="wrapper">
+    <div class="toggle">
+      <input class="toggle-input" type="checkbox" />
+      <div class="toggle-bg"></div>
+      <div class="toggle-switch">
+        <div class="toggle-switch-figure"></div>
+        <div class="toggle-switch-figureAlt"></div>
+      </div>
+    </div>
+  </div>
+  <section class="main">
+    <div class="container">
+      <div class="top">
+        <div class="k-wrap">
+          <div class="menu">
+            <div class="a"></div>
+            <div class="b"></div>
+            <div class="c"></div>
+          </div>
+          <!-- Nav Bar Start -->
+          <div id="menu-list" class="menu-li">
+            <a href="https://github.com/Yash-Sharma-1807">Github</a>
+            <a href="https://telegram.me/Yash_Sharma_1807">Telegram</a>
+            <a href="https://telegram.me/Enmu_Kizuki_Bot">Bot</a>
+            <a href="https://telegram.me/TitanOwner">Titans</a>
+          </div>
+        </div>
+        <div class="logo">
+          <!-- LOGO Here -->
+          <img src="https://telegra.ph/file/dc2465152794206a7c8ce.jpg">
+        </div>
+        <div class="name">
+          <h2>Yash Sharma</h2> <!--  Enter your name here. -->
+          <p>@Yash_Sharma_1807</p> <!--  Enter your username here. -->
+        </div>
+      </div>
+      <div class="bottom">
+        <div class="details">
+          <h2>About</h2>
+          <hr>
+          <br>
+          <!-- Info here -->
+          <pre><p class="info" >HTML |•| JAVA-Python |•|</p></pre>
+          </pre>
+        </div>
+        <div class="social">
+
+          <!--  Enter ur social media links here -->
+          <a href="https://github.com/Yash-Sharma-1807"><i class="fab fa-github"></i></a>
+          <a href="https://telegram.me/Yash_Sharma_1807"><i class="fab fa-telegram"></i></a>
+          <a href="https://www.instagram.com/Yash_Sharma_8016/"><i class="fab fa-instagram"></i></a> 
+          
+          <!-- Some other social media icons copy it from below and paste it above
+          <a href=""><i class="fab fa-linkedin"></i></a>
+          <a href=""><i class="fab fa-twitter"></i></a>
+          <a href=""><i class="fas fa-coffee"></i></a>
+          -->
+        </div>
+        <div class="btns">
+          <div class="btn1"><a class="follow" href="https://github.com/Yash-Sharma-1807" target="_blank">FOLLOW</a></div>
+          <div class="btn2"><a class="more" href="https://telegram.me/Yash_Sharma_1807" target="_blank">CONTACT ON TG</a></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <script src="main.js"></script>
 </body>
+
 </html>
